# autodatabase

./: .gitignore  LICENSE  auto.cabal  inventory.data
Database files/: Autodbase.csv  Autodbase.xlsx  Inventory Data.xlsx  inventory.txt
src/: Main (old).hs  Main.hs
src/Auto/: Auto.hs
