name:                auto
version:             0.1.0.0
synopsis:            Automobile Database
description:         Select an automobile based on your preferences.
-- homepage:            
license:             Apache-2.0
license-file:        LICENSE
author:              Barry Hoover
maintainer:          gunrun73@gmail.com
copyright:           2022, Barry Hoover
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable auto
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , random
                     , split
                     , aeson
                     , text
                     , directory
                     , safe
  other-modules:  Auto.Auto
